# minihometerm

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  config.example.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
assets/kv/: placeholder.kv
src/minihometerm/: __init__.py  app.py  config.py  hass_client.py  main.py
src/minihometerm/core/: models.py  services.py
src/minihometerm/ext/: homeassistant_api.py
src/minihometerm/helpers/: config.py  logger.py
src/minihometerm/ui/: loader.py  screens.py  widgets.py
tests/: conftest.py  doubles.py  test_app.py  test_config.py  test_core.py  test_hass_client.py  test_ui_loader.py
tests/helpers/: test_logger.py
tools/: cleanup.py
