[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minihometerm"
version = "0.1.0"
description = "A Kivy-based UI application"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Peter Nitschneider", email = "info@nider.sk" }]
dependencies = [
    "kivy>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["minihometerm*"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/minihometerm --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100