[metadata]
name = minihometerm
version = 0.1.0
description = A Kivy-based UI application
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    kivy>=2.3.0

[options.packages.find]
where = src

[flake8]
max-line-length = 100
exclude = .venv,build,dist,__pycache__

[mypy]
python_version = 3.11
ignore_missing_imports = True
